--- a/src/app/pages/job-board/professional/language/language-list/language-list.component.html
+++ b/src/app/pages/job-board/professional/language/language-list/language-list.component.html
@@ -45,15 +45,15 @@
                     <p-sortIcon field="idiom"></p-sortIcon>
                 </th>
                 <th pSortableColumn="written_level">
-                    Nivel de lectura
+                    Nivel de Escrito
                     <p-sortIcon field="written_level"></p-sortIcon>
                 </th>
                 <th pSortableColumn="spoken_level">
-                    Nivel escrito
+                    Nivel Hablado
                     <p-sortIcon field="spoken_level"></p-sortIcon>
                 </th>
                 <th pSortableColumn="read_level">
-                    Nivel de lectura
+                    Nivel de Lectura
                     <p-sortIcon field="read_level"></p-sortIcon>
                 </th>
                 <th></th>
