--- a/src/app/pages/job-board/professional/professional.component.html
+++ b/src/app/pages/job-board/professional/professional.component.html
@@ -19,7 +19,7 @@
         <p-tabPanel header="Referencias Personales" leftIcon="pi pi-users" tooltip="">
             <app-reference *ngIf="selectedTab===5"></app-reference>
         </p-tabPanel>
-        <p-tabPanel header="Curriculum" leftIcon="pi pi-users" tooltip="">
+        <p-tabPanel header="Curriculum" leftIcon="pi pi-book" tooltip="">
             <app-curriculum *ngIf="selectedTab===6"></app-curriculum>
         </p-tabPanel>
     </p-tabView>
