--- a/src/app/pages/job-board/professional/course/course-list/course-list.component.html
+++ b/src/app/pages/job-board/professional/course/course-list/course-list.component.html
@@ -39,44 +39,36 @@
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn="type">
-                    Tipo
+                <th pSortableColumn="type">Tipo
                     <p-sortIcon field="type"></p-sortIcon>
                 </th>
-                <th pSortableColumn=" institution">
-                    Institución
+                <th pSortableColumn=" institution">Institución
                     <p-sortIcon field=" institution"></p-sortIcon>
                 </th>
-                <th pSortableColumn="certification_type">
-                    tipo de
-                    certificado
+                <th pSortableColumn="certification_type">Tipo de Certificado
                     <p-sortIcon field="certification_type"></p-sortIcon>
                 </th>
-                <th pSortableColumn="area">
-                    Area
+                <th pSortableColumn="area"> Área
                     <p-sortIcon field="area"></p-sortIcon>
                 </th>
-                <th pSortableColumn="name">
-                    Nombre
+                <th pSortableColumn="name">Nombre
                     <p-sortIcon field="name"></p-sortIcon>
                 </th>
-                <th pSortableColumn="description">
-                    descripcion
+                <th pSortableColumn="description"> Descripción
                     <p-sortIcon field="description"></p-sortIcon>
                 </th>
-                <th pSortableColumn="start_date">
+                <!-- <th pSortableColumn="start_date">
                     fecha de inicio
                     <p-sortIcon field="start_date"></p-sortIcon>
                 </th>
                 <th pSortableColumn="end_date">
                     fecha de fin
                     <p-sortIcon field="end_date"></p-sortIcon>
-                </th>
+                </th> -->
                 <th pSortableColumn="hours">
-                    horas
+                    Horas
                     <p-sortIcon field="hours"></p-sortIcon>
                 </th>
-                <th></th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-course>
@@ -102,12 +94,12 @@
                 <td>
                     {{course.description}}
                 </td>
-                <td>
+                <!-- <td>
                     {{course.start_date}}
                 </td>
                 <td>
                     {{course.end_date}}
-                </td>
+                </td> -->
                 <td>
                     {{course.hours}}
                 </td>
