--- a/src/app/pages/job-board/professional/experience/experience-list/experience-list.component.html
+++ b/src/app/pages/job-board/professional/experience/experience-list/experience-list.component.html
@@ -27,7 +27,7 @@
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between table-header">
-                <h5 class="p-m-0">Referencias</h5>
+                <h5 class="p-m-0">Referencias Personales</h5>
                 <span class="p-input-icon-left">
                     <i class="pi pi-search" (click)="searchExperiences($event,search.value)"></i>
                     <input #search pInputText type="text" (keyup)="searchExperiences($event,$event.target.value)"
@@ -49,7 +49,7 @@
                     <p-sortIcon field="employer"></p-sortIcon>
                 </th>
                 <th pSortableColumn="position">
-                    Posición
+                    Cargo
                     <p-sortIcon field="position"></p-sortIcon>
                 </th>
                 <th pSortableColumn="start_date">
@@ -61,7 +61,7 @@
                     <p-sortIcon field="activities"></p-sortIcon>
                 </th>
                 <th pSortableColumn="reason_leave">
-                    Razon
+                    Razón de Salida
                     <p-sortIcon field="reason_leave"></p-sortIcon>
                 </th>
                 <th pSortableColumn="is_working">
