--- a/src/app/pages/job-board/professional/language/language-form/language-form.component.html
+++ b/src/app/pages/job-board/professional/language/language-form/language-form.component.html
@@ -1,105 +1,101 @@
-{{formLanguageIn.value|json}}
-<div class="p-fluid">
-    <form [formGroup]="formLanguageIn" (ngSubmit)="onSubmit($event)">
-       
-        
-        <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
-            <label for="idiom">
-              <i class="p-error">*</i> Idioma:
-              <i *ngIf="idiomField.valid" class="pi pi-check-circle icon-valid"></i>
-              <i *ngIf="idiomField.invalid && (idiomField.touched || idiomField.dirty)"
-                class="pi pi-times-circle icon-invalid"></i>
-            </label>
-            <p-dropdown id="idiom" [options]="idioms" formControlName="idiom"
-                        optionLabel="name" [filter]="true" filterBy="name"
-                        placeholder="Seleccione...">
-              <ng-template pTemplate="selectedidiom">
-                <div class="country-idiom country-idiom-value"  *ngIf="idiomField.value">
-                  <div>{{idiom.name}}</div>
-                </div>
-              </ng-template>
-              <ng-template let-idiom pTemplate="idiom">
-                <div class="country-idiom">
-                  <div>{{idiom.name}}</div>
-                </div>
-              </ng-template>
-            </p-dropdown>
-          </div>
-          <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
-            <label for="written_level">
-              <i class="p-error">*</i> Nivel escrito:
-              <i *ngIf="writtenLevelField.valid" class="pi pi-check-circle icon-valid"></i>
-              <i *ngIf="writtenLevelField.invalid && (writtenLevelField.touched || writtenLevelField.dirty)"
-                class="pi pi-times-circle icon-invalid"></i>
-            </label>
-            <p-dropdown id="written_level" [options]="writtenLevels" formControlName="written_level"
-                        optionLabel="name" [filter]="true" filterBy="name"
-                        placeholder="Seleccione...">
-              <ng-template pTemplate="selectedwrittenLevel">
-                <div class="country-writtenLevel country-writtenLevel-value"  *ngIf="writtenLevelField.value">
-                  <div>{{written_level.name}}</div>
-                </div>
-              </ng-template>
-              <ng-template let-written_level pTemplate="writtenLevel">
-                <div class="country-writtenLevel">
-                  <div>{{written_level.name}}</div>
-                </div>
-              </ng-template>
-            </p-dropdown>
-          </div>
-          <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
-            <label for="spoken_level">
-              <i class="p-error">*</i> Nivel de hablado:
-              <i *ngIf="spokenLevelField.valid" class="pi pi-check-circle icon-valid"></i>
-              <i *ngIf="spokenLevelField.invalid && (spokenLevelField.touched || spokenLevelField.dirty)"
-                class="pi pi-times-circle icon-invalid"></i>
-            </label>
-            <p-dropdown id="spoken_level" [options]="spokenLevels" formControlName="spoken_level"
-                        optionLabel="name" [filter]="true" filterBy="name"
-                        placeholder="Seleccione...">
-              <ng-template pTemplate="selectedspokenLevel">
-                <div class="country-spokenLevel country-spokenLevel-value"  *ngIf="spokenLevelField.value">
-                  <div>{{spoken_level.name}}</div>
-                </div>
-              </ng-template>
-              <ng-template let-spoken_level pTemplate="spokenLevel">
-                <div class="country-spokenLevel">
-                  <div>{{spoken_level.name}}</div>
-                </div>
-              </ng-template>
-            </p-dropdown>
-          </div> 
-          <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
-            <label for="read_level">
-              <i class="p-error">*</i> Nivel de lectura:
-              <i *ngIf="readLevelField.valid" class="pi pi-check-circle icon-valid"></i>
-              <i *ngIf="readLevelField.invalid && (readLevelField.touched || readLevelField.dirty)"
-                class="pi pi-times-circle icon-invalid"></i>
-            </label>
-            <p-dropdown id="read_level" [options]="readLevels" formControlName="read_level"
-                        optionLabel="name" [filter]="true" filterBy="name"
-                        placeholder="Seleccione...">
-              <ng-template pTemplate="selectedreadLevel">
-                <div class="country-readLevel country-readLevel-value"  *ngIf="readLevelField.value">
-                  <div>{{read_level.name}}</div>
-                </div>
-              </ng-template>
-              <ng-template let-read_level pTemplate="readLevel">
-                <div class="country-readLevel">
-                  <div>{{read_level.name}}</div>
-                </div>
-              </ng-template>
-            </p-dropdown>
-          </div>
-        <div class="p-formgrid p-grid">
-            <div class="p-field p-col">
-                <button type="submit" pButton pRipple label="Guardar y Salir" icon="pi pi-save"
-                    class="p-button-success p-button-raised"></button>
+<!-- {{formLanguageIn.value|json}} -->
+<p-card>
+  <div class="p-fluid">
+    <form [formGroup]="formLanguageIn" (ngSubmit)="onSubmit()">
+      <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
+        <label for="idiom">
+          <i class="p-error">*</i> Idioma:
+          <i *ngIf="idiomField.valid" class="pi pi-check-circle icon-valid"></i>
+          <i *ngIf="idiomField.invalid && (idiomField.touched || idiomField.dirty)"
+            class="pi pi-times-circle icon-invalid"></i>
+        </label>
+        <p-dropdown id="idiom" [options]="idioms" formControlName="idiom" optionLabel="name" [filter]="true"
+          filterBy="name" placeholder="Seleccione...">
+          <ng-template pTemplate="selectedidiom">
+            <div class="country-idiom country-idiom-value" *ngIf="idiomField.value">
+              <div>{{idiom.name}}</div>
             </div>
-            <div *ngIf="!idField.value" class="p-field p-col">
-                <button type="button" pButton pRipple label="Guardar" icon="pi pi-arrow-right" class="p-button-raised"
-                    (click)="onSubmit($event,true)"></button>
+          </ng-template>
+          <ng-template let-idiom pTemplate="idiom">
+            <div class="country-idiom">
+              <div>{{idiom.name}}</div>
             </div>
+          </ng-template>
+        </p-dropdown>
+      </div>
+      <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
+        <label for="written_level">
+          <i class="p-error">*</i> Nivel Escrito:
+          <i *ngIf="writtenLevelField.valid" class="pi pi-check-circle icon-valid"></i>
+          <i *ngIf="writtenLevelField.invalid && (writtenLevelField.touched || writtenLevelField.dirty)"
+            class="pi pi-times-circle icon-invalid"></i>
+        </label>
+        <p-dropdown id="written_level" [options]="writtenLevels" formControlName="written_level" optionLabel="name"
+          [filter]="true" filterBy="name" placeholder="Seleccione...">
+          <ng-template pTemplate="selectedwrittenLevel">
+            <div class="country-writtenLevel country-writtenLevel-value" *ngIf="writtenLevelField.value">
+              <div>{{written_level.name}}</div>
+            </div>
+          </ng-template>
+          <ng-template let-written_level pTemplate="writtenLevel">
+            <div class="country-writtenLevel">
+              <div>{{written_level.name}}</div>
+            </div>
+          </ng-template>
+        </p-dropdown>
+      </div>
+      <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
+        <label for="spoken_level">
+          <i class="p-error">*</i> Nivel de Hablado:
+          <i *ngIf="spokenLevelField.valid" class="pi pi-check-circle icon-valid"></i>
+          <i *ngIf="spokenLevelField.invalid && (spokenLevelField.touched || spokenLevelField.dirty)"
+            class="pi pi-times-circle icon-invalid"></i>
+        </label>
+        <p-dropdown id="spoken_level" [options]="spokenLevels" formControlName="spoken_level" optionLabel="name"
+          [filter]="true" filterBy="name" placeholder="Seleccione...">
+          <ng-template pTemplate="selectedspokenLevel">
+            <div class="country-spokenLevel country-spokenLevel-value" *ngIf="spokenLevelField.value">
+              <div>{{spoken_level.name}}</div>
+            </div>
+          </ng-template>
+          <ng-template let-spoken_level pTemplate="spokenLevel">
+            <div class="country-spokenLevel">
+              <div>{{spoken_level.name}}</div>
+            </div>
+          </ng-template>
+        </p-dropdown>
+      </div>
+      <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
+        <label for="read_level">
+          <i class="p-error">*</i> Nivel de Lectura:
+          <i *ngIf="readLevelField.valid" class="pi pi-check-circle icon-valid"></i>
+          <i *ngIf="readLevelField.invalid && (readLevelField.touched || readLevelField.dirty)"
+            class="pi pi-times-circle icon-invalid"></i>
+        </label>
+        <p-dropdown id="read_level" [options]="readLevels" formControlName="read_level" optionLabel="name"
+          [filter]="true" filterBy="name" placeholder="Seleccione...">
+          <ng-template pTemplate="selectedreadLevel">
+            <div class="country-readLevel country-readLevel-value" *ngIf="readLevelField.value">
+              <div>{{read_level.name}}</div>
+            </div>
+          </ng-template>
+          <ng-template let-read_level pTemplate="readLevel">
+            <div class="country-readLevel">
+              <div>{{read_level.name}}</div>
+            </div>
+          </ng-template>
+        </p-dropdown>
+      </div>
+      <div class="p-formgrid p-grid">
+        <div class="p-field p-col">
+          <button type="submit" pButton pRipple label="Guardar y Salir" icon="pi pi-save"
+            class="p-button-success p-button-raised"></button>
         </div>
+        <div *ngIf="!idField.value" class="p-field p-col">
+          <button type="button" pButton pRipple label="Guardar" icon="pi pi-arrow-right" class="p-button-raised"
+            (click)="onSubmit($event,true)"></button>
+        </div>
+      </div>
     </form>
-</div>
+  </div>
+</p-card>
