--- a/src/app/pages/job-board/professional/reference/reference-list/reference-list.component.html
+++ b/src/app/pages/job-board/professional/reference/reference-list/reference-list.component.html
@@ -26,7 +26,7 @@
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between table-header">
-                <h5 class="p-m-0">Referencias</h5>
+                <h5 class="p-m-0">Referencias Personales</h5>
                 <span class="p-input-icon-left">
                     <i class="pi pi-search" (click)="searchReferences($event,search.value)"></i>
                     <input #search pInputText type="text" (keyup)="searchReferences($event,$event.target.value)"
@@ -44,19 +44,19 @@
                     <p-sortIcon field=" institution"></p-sortIcon>
                 </th>
                 <th pSortableColumn="position">
-                    Posición
+                    Cargo
                     <p-sortIcon field="position"></p-sortIcon>
                 </th>
                 <th pSortableColumn="contact_name">
-                    Nombre de contacto
+                    Nombre de Contacto
                     <p-sortIcon field="contact_name"></p-sortIcon>
                 </th>
                 <th pSortableColumn="contact_phone">
-                    teléfono de contacto
+                    Teléfono de Contacto
                     <p-sortIcon field="contact_phone"></p-sortIcon>
                 </th>
                 <th pSortableColumn="contact_email">
-                    Email de contacto
+                    Email de Contacto
                     <p-sortIcon field="contact_email"></p-sortIcon>
                 </th>
                 <th></th>
@@ -92,7 +92,7 @@
         </ng-template>
         <ng-template pTemplate="summary">
             <div class="p-d-flex p-ai-center p-jc-between">
-                En total hay {{paginatorIn ? paginatorIn.total : 0 }} reference.
+                En total hay {{paginatorIn ? paginatorIn.total : 0 }} referencias.
             </div>
         </ng-template>
     </p-table>
