--- a/src/app/pages/job-board/professional/reference/reference.component.html
+++ b/src/app/pages/job-board/professional/reference/reference.component.html
@@ -1,23 +1,15 @@
 <div class="p-grid">
     <div class="p-col-12">
-        <app-reference-list
-                [referencesIn]="references"
-                [flagReferences]="flagReferences"
-                [paginatorIn]="paginator"
-                [formReferenceIn]="formReference"
-                (referencesOut)="references=$event"
-                (displayOut)="referenceDialog=$event"
-                (formReferenceOut)="formReference=$event"
-                (paginatorOut)="getReferences($event)">
+        <app-reference-list [referencesIn]="references" [flagSkeletonReferences]="flagReferences"
+            [paginatorIn]="paginator" [formReferenceIn]="formReference" (referencesOut)="references=$event"
+            (displayOut)="referenceDialog=$event" (formReferenceOut)="formReference=$event"
+            (paginatorOut)="getReferences($event)">
         </app-reference-list>
 
-        <p-dialog [(visible)]="referenceDialog" [style]="{width: '450px'}" header="Referencias" [modal]="true"
-                  styleClass="p-fluid" (onHide)="referenceDialog=false">
-            <app-reference-form
-                    [referencesIn]="references"
-                    [formReferenceIn]="formReference"
-                    (referencesOut)="references=$event"
-                    (displayOut)="referenceDialog=$event">
+        <p-dialog [(visible)]="referenceDialog" [style]="{width: '450px'}" header="Referencias Personales"
+            [modal]="true" styleClass="p-fluid" (onHide)="referenceDialog=false">
+            <app-reference-form [referencesIn]="references" [formReferenceIn]="formReference"
+                (referencesOut)="references=$event" (displayOut)="referenceDialog=$event">
             </app-reference-form>
         </p-dialog>
     </div>
