ajustes finales cambio del mpetodo para obtencion del rol de usuario limpeza de campos de los filtros al hacer clic en limpiar

--- a/src/app/pages/job-board/landing-page/web-offer/offer-data-view/data-view-list-item/data-view-list-item.component.html
+++ b/src/app/pages/job-board/landing-page/web-offer/offer-data-view/data-view-list-item/data-view-list-item.component.html
@@ -10,7 +10,7 @@
             <i class="pi pi-users offer-category-icon"></i>
             <span [class]="'offer-badge'">{{ offer.vacancies }} vacantes</span>
         </div>
-        <div class="offer-description">{{ offer.requirements }}</div>
+        <div class="offer-description">{{ offer.aditional_information }}</div>
         <i class="pi pi-globe offer-category-icon"></i>
         <span class="offer-category">{{ offer.location.region }}, {{ offer.location.subregion }}</span>
     </div>
