--- a/src/app/pages/job-board/landing-page/web-offer/web-offer.component.html
+++ b/src/app/pages/job-board/landing-page/web-offer/web-offer.component.html
@@ -8,7 +8,7 @@
                            (onClick)="filterForCategories()" styleClass="p-mb-2 p-mr-2"
                            [model]="items"></p-splitButton>
             <p-button icon="pi pi-filter-slash" label="Limpiar" styleClass="p-mb-2 p-button-secondary"
-                      (click)="cleanSelectedCategories()"></p-button>
+                      (click)="cleanFilters()"></p-button>
             <p-tree [value]="treeData" [virtualScroll]="false" [scrollHeight]="scrollHeight"
                     [virtualNodeHeight]="100" selectionMode="checkbox" [(selection)]="selectedCategories"
                     [filter]="true" emptyMessage="Sin datos."></p-tree>
@@ -44,6 +44,7 @@
 
     <div *ngIf="displayMoreFilters" class="p-fluid">
         <form [formGroup]="formMoreFilters" (submit)="filterForMore()">
+            <p-toast position="top-center" key="errorSpecificField"></p-toast>
             <div class="p-formgrid">
                 <div class="p-field p-col">
                     <h3>Cargo:</h3>
