--- a/src/app/pages/job-board/professional/curriculum/curriculum.component.html
+++ b/src/app/pages/job-board/professional/curriculum/curriculum.component.html
@@ -1,7 +1,9 @@
 <div class="p-grid">
         <div class="p-col-12">
-                <app-curriculum-form [formCurriculumIn]="formProfessional" (displayOut)="professionalDialog=$event">
-                </app-curriculum-form>
+
+                <app-course></app-course>
+
+
         </div>
 
 </div>
